Added stuff about aggregations, fancy indexing and sorting

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1142,7 +1142,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aggregations: max, min, sum, mean, standard deviation..."
+    "## Aggregations: max, min, sum, mean, standard deviation...\n",
+    "\n",
+    "Aggregations allow us to condense the information in an array into just few numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 72 -53  17  92 -33]\n",
+      " [ 95   3 -91 -79 -64]\n",
+      " [-13 -30 -12  40 -42]\n",
+      " [ 93 -61 -13  74 -12]]\n",
+      "Minimum: -91, maximum: 95\n",
+      "Sum: -17\n",
+      "Mean: -0.850000, standard deviation: 58.398866\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "a=np.random.randint(-100, 100, (4,5))\n",
+    "print(a)\n",
+    "print(\"Minimum: %i, maximum: %i\" %(a.min(), a.max()))\n",
+    "print(\"Sum: %i\" % a.sum())\n",
+    "print(\"Mean: %f, standard deviation: %f\" % (a.mean(), a.std()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of aggregating over the whole array, we can aggregate over certain axes only as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 0 8 8 3]\n",
+      " [8 2 8 4 3]\n",
+      " [0 4 3 6 9]\n",
+      " [8 0 8 5 9]]\n",
+      "Column sums: [18  6 27 23 24]\n",
+      "Row sums: [21 25 22 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.random.randint(0, 10, (4,5))\n",
+    "print(b)\n",
+    "print(\"Column sums:\", b.sum(axis=0))\n",
+    "print(\"Row sums:\", b.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NUOLIKUVAT SUUNNISTA TÄHÄN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Note that most of the aggregation functions in NumPy have the corresponding method. In addition, Python language has builtin functions `sum`, `min`, `max`, `any`, and `all` for sequences. Make sure you don't accidentally use these for arrays, since they may have slightly different semantics, and they will be significantly slower than NumPy's functions and methods.\n",
+    "</div>\n",
+    "\n",
+    "Python function | NumPy function | NumPy method\n",
+    "-------|----------------|-------------\n",
+    "sum    | np.sum         | a.sum\n",
+    " -     | np.prod        | a.prod\n",
+    " -     | np.mean        | a.mean\n",
+    " -     | np.std         | a.std\n",
+    " -     | np.var         | a.var\n",
+    " min   | np.min         | a.min\n",
+    " max   | np.max         | a.max\n",
+    " -     | np.argmin      | a.argmin\n",
+    " -     | np.argmax      | a.argmax\n",
+    " -     | np.median      | -\n",
+    " -     | np.percentile  | -\n",
+    " any   | np.any         | a.any\n",
+    " all   | np.all         | a.all\n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's measure how much slower Python's sum function is compared to Numpy's equivalent when aggrating over an array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 30.41 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "100000 loops, best of 3: 3.08 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(1000)\n",
+    "%timeit np.sum(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 5.98 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 75.5 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The speed of NumPy is partly due to the fact that its arrays must have same type for all the elements. This requirement allows some efficient optimizations."
    ]
   },
   {
@@ -1163,14 +1310,375 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fancy indexing"
+    "## Fancy indexing\n",
+    "\n",
+    "Using indexing we can get a single elements from an array. If we wanted multiple (not necessarily contiguous) elements, we would have to index several times:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 15  0  3  3  7  9 19 18  4  6 12  1  6  7 14 17  5 13  8]\n",
+      "[ 0  7 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "a=np.random.randint(0, 20,20)\n",
+    "a2=np.array([a[2], a[5], a[7]])\n",
+    "print(a)\n",
+    "print(a2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sorting arrays"
+    "That's quite verbose. *Fancy indexing* provides a concise syntax for accessing multiple elements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  7 19]\n",
+      "[ 0  7 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "idx=[2,5,7]           # List of indices\n",
+    "print(a[idx])         # In fancy indexing in place of a single index, we can provide a list of indices\n",
+    "print(a[[2,5,7]])     # Or directly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also assign to multiple elements through fancy indexing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 15 -1  3  3 -1  9 -1 18  4  6 12  1  6  7 14 17  5 13  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a[idx] = -1\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fancy indexing works also for higher dimensional arrays:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 7 5 9]\n",
+      " [0 2 7 2]\n",
+      " [9 2 3 3]\n",
+      " [2 3 4 1]]\n",
+      "[7 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.random.randint(0,10, (4,4))\n",
+    "print(b)\n",
+    "row=np.array([0,2])\n",
+    "col=np.array([1,3])\n",
+    "print(b[row, col])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the result array was one dimensional! The shape of the result array is defined by the shape of the index arrays, not by the shape of the original array. The next example will demonstrate this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [2 2]]\n",
+      "[[1 3]\n",
+      " [1 3]]\n",
+      "[[7 9]\n",
+      " [2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "row2=np.array([[0, 0], [2,2]])\n",
+    "col2=np.array([[1,3], [1,3]])\n",
+    "print(row2)\n",
+    "print(col2)\n",
+    "print(b[row2, col2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both index arrays, row and col, had shape (2,2), so also the result was of shape (2,2). However, this form has some repetition in the indices. But we can rely that the broadcasting rules will enable us to avoid the repetition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]\n",
+      " [2]]\n",
+      "[[1 3]]\n",
+      "[[7 9]\n",
+      " [2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "row2=row.reshape(2,1)   # has shape (2, 1)\n",
+    "col2=col.reshape(1,2)   # has shape (1, 2)\n",
+    "print(row2)\n",
+    "print(col2)\n",
+    "print(b[row2, col2])    # the index arrays will be broadcasted here to shape (2,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can also combine normal indexing, slicing and fancy indexing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 5],\n",
+       "       [0, 7],\n",
+       "       [9, 3],\n",
+       "       [2, 4]])"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[:,[0,2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting arrays\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "[2 1 4 3 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([2,1,4,3,5])\n",
+    "print(np.sort(a))          # Does not modify the argument\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.sort()            # Modifies the argument\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 9 6 5]\n",
+      " [3 1 8 0]\n",
+      " [4 9 6 5]\n",
+      " [7 8 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.random.randint(0,10, (4,4))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 6, 0],\n",
+       "       [3, 8, 6, 5],\n",
+       "       [4, 9, 8, 5],\n",
+       "       [7, 9, 8, 9]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(b, axis=0)           # sort each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 5, 6, 9],\n",
+       "       [0, 1, 3, 8],\n",
+       "       [4, 5, 6, 9],\n",
+       "       [7, 8, 8, 9]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(b, axis=1)           # Sort each row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A related operation is the argsort function. Which doesn't sort the elements, but returns the indices of the sorted elements. An example will demonstrate this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a: [2 1 4 3 5]\n",
+      "Indices: [1 0 3 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([2,1,4,3,5])\n",
+    "print(\"Array a:\", a)\n",
+    "idx = np.argsort(a)\n",
+    "print(\"Indices:\", idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These indices say that the smallest element of the array is in position 1 of `a`, second smallest elements is in position 0 of `a`, third smallest is in position 3, and so on. We can verify that these indices will indeed order the elements using fancy indexing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[idx])"
    ]
   },
   {
